--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,28 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css /styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) /styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/flat-ui-official/css/flat-ui.css" />
     <!-- endbuild -->
     <!-- build:js /scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
-
+    <!-- build:js /scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/jquery/jquery.js"></script>
+    <script src="bower_components/sass-bootstrap/js/dropdown.js"></script>
+    <script src="bower_components/sass-bootstrap/js/modal.js"></script>
+    <script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
+    <script src="bower_components/sass-bootstrap/js/popover.js"></script>
+    <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 </head>
 <body>
     <!--[if lt IE 10]>
@@ -34,16 +46,9 @@
 
     <div>
         <div class="main">
-            <?php /* TODO: Escape HTML Chars in breadcrumb */ //echo $this->navigation()->breadcrumbs()->render();?>
-            <?php if($this->title){ ?>
-            <div class="page-header">
-                <h1><?php echo $this->title ?>
-                    <?php if($this->headline){ ?>
-                    <small><?php echo $this->headline; ?></small>
-                    <?php } ?>
-                </h1>
-            </div>
-            <?php } ?>
+
+            include "include/heading.html"
+
             <!-- zend:layout content -->
             <!-- build:remove -->
 
@@ -54,13 +59,6 @@
     include "include/footer.html"
 
     <div class="modal fade" id="eventModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-
-
-    <!-- build:js /scripts/vendor.js -->
-    <!-- bower:js -->
-
-    <!-- endbower -->
-    <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
