Updated to latest font awesome version, fixed css, integrated jquery.ui

--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
+    <link rel="stylesheet" href="bower_components/flat-ui-official/css/flat-ui.css" />
     <!-- endbuild -->
     <!-- build:css(.tmp) /styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="bower_components/flat-ui-official/css/flat-ui.css" />
     <!-- endbuild -->
     <!-- build:js /scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -29,10 +29,10 @@
     <!-- build:js /scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/sass-bootstrap/js/dropdown.js"></script>
-    <script src="bower_components/sass-bootstrap/js/modal.js"></script>
-    <script src="bower_components/sass-bootstrap/js/tooltip.js"></script>
-    <script src="bower_components/sass-bootstrap/js/popover.js"></script>
+    <script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
+    <script src="bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
+    <script src="bower_components/jquery.ui/ui/jquery.ui.droppable.js"></script>
+    <script src="bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
